--- a/spring1/src/main/resources/application.properties
+++ b/spring1/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url=jdbc:mysql://spring-db.cqu3g9cfzrqn.ap-northeast-2.rds.amazonaws.com\:3306/myselectshop
+spring.datasource.username=zaq7974
+spring.datasource.password=jimmy1122
+spring.jpa.hibernate.ddl-auto=update
